# Game

./: .gitignore  .pre-commit-config.yaml  CommandersArena.spec  Digraph.gv  README.md  basic_board_game.py  basic_rl.py  best_genome.pkl  game.py  kriegsspiel.py  main.py  mcst_game.py  pyproject.toml  setup.ps1  setup.sh
.github/workflows/: build-windows.yml
ai/: base_agent.py  basic_agent.py  dnn_agent.py  draft_helper.py  mcts.py  minimax.py  simple_ai.py
ai/agents/: base_agent.py  basic_agent.py  dfs_planner.py  minimax_agent.py  neat_agent.py  runtime_neat_agent.py
ai/neat/: minimax_agent.py  neat_agent.py  neat_config.txt  neat_network.py  neat_selfplay.py  neat_trainer.py  sample_neat.py  sample_neat_config.txt  train_neat.py
ai/neat/genomes/: best_genome.pkl  best_genome1.pkl  best_genome_re.pkl
ai/planning/: action_planning.py  full_turn_dfs.py  nn_utils.py
ai/utils/: draft_helper.py
api/: api.py  headless_api.py  simulation_api.py
assets/neat/configs/: neat_config.txt
assets/neat/genomes/: best_genome.pkl  best_genome1.pkl  best_genome_20251123_1454.pkl  (+6 more)
backend/: board.py  game_engine.py  logic.py  units.py
frontend/: renderer.py  ui.py
log/: log.txt
nsis/: installer.nsi
src/: main.py
src/api/: api.py  simulation_api.py
src/backend/: board.py  logic.py
src/frontend/: ui.py
src/utils/: constants.py  helpers.py  logging.py  messages.py  path_utils.py
src/variables/: variables.py
utils/: button_manager.py  constants.py  font_manager.py  fonts.py  helpers.py  image_helpers.py  logging.py  messages.py  music_utils.py  path_utils.py
variables/: variables.py
(+31 files in other folders)
