[tool.poetry]
name = "game"
version = "0.1.0"
description = ""
authors = ["Szauer Szilárd <szauerszilard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tensorflow = "^2.15.0"      # Compatible with Python 3.11
numpy = "^1.26.4"            # Matches TensorFlow requirements
pandas = "^2.3.1"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
scikit-learn = "^1.3.2"
pygame-ce = "^2.5.5"
neat-python = "^0.92"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.3.0"
ruff = "^0.12.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.poetry.scripts]
game = "main:main"
